chore: use mise instead of go tool

--- a/.envrc
+++ b/.envrc
@@ -1,1 +1,10 @@
-export DATABASE_URL="postgres://todo:todo@localhost:5432/todo?sslmode=disable"
+eval "$(mise activate bash)"
+
+go version
+sqlc version
+muxt version
+
+POSTGRES_USER="$(yq '.services.postgres.environment.POSTGRES_USER' docker-compose.yml)"
+POSTGRES_PASSWORD="$(yq '.services.postgres.environment.POSTGRES_PASSWORD' docker-compose.yml)"
+POSTGRES_DB="$(yq '.services.postgres.environment.POSTGRES_DB' docker-compose.yml)"
+export DATABASE_URL="postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@localhost:5432/${POSTGRES_DB}?sslmode=disable"
